<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    android:orientation="horizontal"
    tools:context=".activities.AddressActivity">

    <TextView
        android:id="@+id/textViewHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/wpisz_dane_do_dostawy"
        android:textSize="37sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextCity"
        android:layout_width="280dp"
        android:layout_height="55dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_user"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/miasto"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:padding="12dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextZip"
        android:layout_width="280dp"
        android:layout_height="55dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_user"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/kod_pocztowy"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:padding="12dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCity"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextStreet"
        android:layout_width="280dp"
        android:layout_height="55dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_user"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/ulica"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:padding="12dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewHome"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="280dp"
        android:layout_height="55dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_user"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/numer_domu"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:padding="12dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextStreet"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/buttonGetLocation"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/custom_button"
        android:onClick="getCurrentLocation"
        android:text="@string/twoja_lokalizacja"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextZip"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/buttonGetAddressFromDataBase"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/custom_button"
        android:onClick="getAddressFromDataBase"
        android:text="@string/ostatni_u_yty_adres"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonGetLocation"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/searchRestaurant"
        android:layout_width="340dp"
        android:layout_height="80dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/custom_button"
        android:onClick="addAddressToDatabase"
        android:text="@string/szukaj_reastauracji"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:textStyle="bold"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addAddressToDataBase"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/addAddressToDataBase"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/custom_button"
        android:onClick="validationAddress"
        android:text="@string/wpisz_r_cznie"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonGetAddressFromDataBase"
        tools:ignore="MissingConstraints,OnClick" />

</androidx.constraintlayout.widget.ConstraintLayout>