<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterActivity"
    android:background="@drawable/background1"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/textViewRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/rejestracja"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextLoginRegisterPage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextLoginRegisterPage"
        android:layout_width="280dp"
        android:layout_height="55dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_user"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/login"
        android:inputType="textPersonName"
        android:padding="12dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textSize="15sp"
        android:maxLength="20"
        app:layout_constraintBottom_toTopOf="@+id/editTextPasswordRegisterPage1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRegister" />

    <EditText
        android:id="@+id/editTextPasswordRegisterPage1"

        android:layout_width="280dp"
        android:layout_height="55dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/has_o"
        android:inputType="textPassword"
        android:padding="12dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textSize="15sp"
        android:maxLength="30"
        app:layout_constraintBottom_toTopOf="@+id/editTextPasswordRegisterPage2"
        app:layout_constraintStart_toStartOf="@+id/editTextLoginRegisterPage"
        app:layout_constraintTop_toBottomOf="@+id/editTextLoginRegisterPage" />

    <EditText
        android:id="@+id/editTextPasswordRegisterPage2"
        android:layout_width="280dp"
        android:layout_height="55dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/powt_rz_has_o"
        android:inputType="textPassword"
        android:padding="12dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textSize="15sp"
        android:maxLength="30"
        app:layout_constraintBottom_toTopOf="@+id/editTextEmailAddressRegisterPage"
        app:layout_constraintStart_toStartOf="@+id/editTextPasswordRegisterPage1"
        app:layout_constraintTop_toBottomOf="@+id/editTextPasswordRegisterPage1" />

    <EditText
        android:id="@+id/editTextPhoneRegisterPage"
        android:layout_width="280dp"
        android:layout_height="55dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_phone"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/numer_telefonu"
        android:inputType="phone"
        android:padding="12dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textSize="15sp"
        android:maxLength="12"
        app:layout_constraintBottom_toTopOf="@+id/userRoleSpinner"
        app:layout_constraintStart_toStartOf="@+id/editTextEmailAddressRegisterPage"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmailAddressRegisterPage" />

    <EditText
        android:id="@+id/editTextEmailAddressRegisterPage"
        android:layout_width="280dp"
        android:layout_height="55dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textSize="15sp"
        android:maxLength="30"
        app:layout_constraintBottom_toTopOf="@+id/editTextPhoneRegisterPage"
        app:layout_constraintStart_toStartOf="@+id/editTextPasswordRegisterPage2"
        app:layout_constraintTop_toBottomOf="@+id/editTextPasswordRegisterPage2" />

    <Spinner
        android:id="@+id/userRoleSpinner"
        android:layout_width="280dp"
        android:layout_height="55dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/custom_input"
        android:drawablePadding="12dp"
        android:ems="10"
        android:padding="12dp"
        android:paddingStart="12dp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhoneRegisterPage"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/button"
        android:layout_width="250dp"
        android:layout_height="65dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/custom_button"
        android:onClick="tryRegisterOnClick"
        android:text="@string/zarejestruj_si"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="@+id/editTextPhoneRegisterPage"
        app:layout_constraintTop_toBottomOf="@+id/userRoleSpinner"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button2"
        android:layout_width="250dp"
        android:layout_height="65dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/custom_button"
        android:onClick="openMainActivity"
        android:text="@string/masz_ju_konto_nzaloguj_si"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:backgroundTint="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>