<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity"
    android:background="@drawable/background1"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/loginTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:layout_marginBottom="54dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/zaloguj_sie"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextLogin"
        android:layout_marginBottom="53dp"

        android:layout_width="280dp"
        android:layout_height="55dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_user"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/login"
        android:inputType="textPersonName"
        android:padding="12dp"
        android:textSize="15sp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"

        android:maxLength="20"
        app:layout_constraintBottom_toTopOf="@+id/editTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginTV"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/editTextPassword"

        android:layout_width="280dp"
        android:layout_height="55dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/has_o"
        android:padding="12dp"
        android:paddingStart="12dp"
        android:inputType="textPassword"

        android:maxLength="30"
        android:paddingEnd="12dp"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextLogin"
        app:layout_constraintTop_toBottomOf="@+id/editTextLogin"
        tools:ignore="SpeakableTextPresentCheck"/>

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="10dp"
        android:onClick="tryLoginOnClick"
        android:text="@string/zaloguj"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textAllCaps="false"
        android:background="@drawable/custom_button"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/buttonRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword"/>

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_marginBottom="150dp"
        android:onClick="openActivityRegister"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textAllCaps="false"
        android:background="@drawable/custom_button"
        app:backgroundTint="@null"
        android:text="@string/rejestracja"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />

</androidx.constraintlayout.widget.ConstraintLayout>